--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <h2>I am having fun with it.</h2>
  <h3>Need to learn more.</h3>
  <p>You have birthday this month.</p>
- <p>What should i do for you.</p>   
+ <p>What should i do for you.</p>
+ <img src="anjan.jpg" alt="">   
 </body>
 </html>
