--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <h3>Need to learn more.</h3>
  <p>You have birthday this month.</p>
  <p>What should i do for you.</p>
- <img src="anjan.jpg" alt="">   
+ <img src="anjan.jpg" alt=""> 
+ <img src="jaantush.jpg" alt="">  
 </body>
 </html>
